# pytest-grader

./: .gitignore  LICENSE  README.md  build.py  lock_tests.py  main.py  pyproject.toml  pytest.ini  pytest_grader.py  test_lock_tests.py
examples/: README.md  conftest.py  debug_locked.py  full_credit.py  grader.yaml  lock.py  locked.py  locked_expected.py  partial_credit.py  pytest_grader.py
pytest_grader/: __init__.py  __main__.py  cli.py  decorators.py  lock_tests.py  logger.py  plugins.py  unlock_interface.txt  unlock_tests.py
tests/: test_first_failed_only.py  test_lock_tests.py
