[project]
name = "pytest-grader"
version = "0.1.7"
description = "Pytest extension for scoring programming assignments."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8",
    "pyyaml>=6.0.2",
    "sqlitedict>=2.1.0",
]
classifiers = ["Framework :: Pytest"]

[project.scripts]
pytest-grader = "pytest_grader.cli:cli_main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytest_grader"]
